--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 body {
   @include background;
   background: $primary-color;
+  color: white;
   height: 100%;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
