--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -11,7 +11,7 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: #ffffff;
+    background: set-text-color($primary-color);
     @include easeOut;
   }
 
@@ -41,7 +41,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.9;
+  opacity: 1;
   visibility: hidden;
   &.show {
     visibility: visible;
@@ -92,7 +92,7 @@
         no-repeat;
       background-size: cover;
       border-radius: 50%;
-      border: solid 3px $secondary-color;
+      border: solid 3px set-text-color2($primary-color);
     }
   }
 
@@ -106,7 +106,7 @@
     }
 
     &.current > a {
-      color: $secondary-color;
+      color: set-text-color2($primary-color);
     }
   }
 
@@ -117,18 +117,18 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
-    color: #ffffff;
+    color: set-text-color($primary-color);
     text-decoration: none;
     @include easeOut;
 
     &:hover {
-      color: $secondary-color;
+      color: set-text-color2($primary-color);
     }
   }
 }
 
 // Delay each Nav Item slide by 0.1 sec
-@for $x from 1 through 4 {
+@for $x from 1 through 5 {
   .nav-item:nth-child(#{$x}) {
     transition-delay: $x * 0.1s;
   }
