--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@
 body {
   @include background;
   background: $primary-color;
-  color: white;
+  color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -44,18 +44,19 @@ header {
 }
 
 .text-secondary {
-  color: $secondary-color;
+  color: set-text-color2($primary-color);
 }
 
 main {
   padding: 4rem;
-  height: 100%;
+  //height: 100%;
+  min-height: calc(100vh - 60px);
   .icons {
     margin-top: 1rem;
     a {
       padding: 0.4rem;
       &:hover {
-        color: $secondary-color;
+        color: set-text-color2($primary-color);
         @include easeOut();
       }
     }
@@ -67,3 +68,40 @@ main {
     }
   }
 }
+
+.about-info {
+  display: grid;
+  grid-gap: 30 px;
+  grid-template-areas:
+    "bioimage bio bio"
+    "job job job";
+  grid-template-columns: repeat(3, 1fr);
+
+  .bio-image {
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: solid 3px set-text-color2($primary-color);
+  }
+
+  .bio {
+    grid-area: bio;
+    font-size: 1.5rem;
+  }
+
+  .job {
+    grid-area: job;
+    background: lighten($primary-color, $amount: 5);
+    padding: 0.5rem;
+    border-bottom: set-text-color2($primary-color) 5px solid;
+  }
+}
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: darken($primary-color, 10);
+  color: set-text-color($primary-color);
+  height: 60px;
+}
+@import "mobile";
