--- a/scss/main.scss
+++ b/scss/main.scss
@@ -97,6 +97,32 @@ main {
   }
 }
 
+// Contact Page
+
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+  div {
+    font-size: 2rem;
+    border: 3px #fff solid;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 0.3rem;
+    @include easeOut;
+
+    &:hover {
+      padding: 0.5rem 1.5rem;
+      background: set-text-color2($primary-color);
+      color: set-text-color($primary-color);
+      span {
+        color: set-text-color($primary-color);
+      }
+    }
+  }
+}
+
 #main-footer {
   text-align: center;
   padding: 1rem;
