--- a/scss/main.scss
+++ b/scss/main.scss
@@ -88,6 +88,28 @@ main {
   }
 }
 
+.key-info {
+  display: grid;
+  grid-gap: 30 px;
+  grid-template-areas:
+    "key1"
+    "key2";
+  grid-template-columns: repeat(1, 1fr);
+  .key-1 {
+    grid-area: key1;
+    margin: 1rem;
+  }
+  .key-2 {
+    grid-area: key2;
+    margin: 1rem;
+  }
+  .key {
+    background: lighten($primary-color, $amount: 5);
+    padding: 0.5rem;
+    border-bottom: set-text-color2($primary-color) 5px solid;
+  }
+}
+
 .job-info {
   display: grid;
   grid-gap: 30 px;
