--- a/scss/main.scss
+++ b/scss/main.scss
@@ -72,19 +72,39 @@ main {
 .about-info {
   display: grid;
   grid-gap: 30 px;
-  grid-template-areas: "bioimage bio bio";
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas: "about";
+  grid-template-columns: repeat(1, 1fr);
 
-  .bio-image {
+  .about {
+    grid-area: bio;
+    font-size: 1.5rem;
+  }
+  .about {
+    background: lighten($primary-color, $amount: 5);
+    padding: 0.5rem;
+    border-bottom: set-text-color2($primary-color) 5px solid;
+  }
+}
+
+.bio-info {
+  display: grid;
+  grid-gap: 30 px;
+  grid-template-areas: "bioimage bio";
+  grid-template-columns: repeat(1, 1fr);
+  .cv-image {
     grid-area: bioimage;
     margin: auto;
     border-radius: 50%;
     border: solid 3px set-text-color2($primary-color);
   }
-
   .bio {
     grid-area: bio;
-    font-size: 1.5rem;
+    margin: 1rem;
+  }
+  .bio {
+    background: lighten($primary-color, $amount: 5);
+    padding: 0.5rem;
+    border-bottom: set-text-color2($primary-color) 5px solid;
   }
 }
 
@@ -206,7 +226,7 @@ main {
   align-items: center;
   margin-top: 1rem;
   div {
-    font-size: 2rem;
+    font-size: 1rem;
     border: 3px #fff solid;
     padding: 1.5rem 2.5rem;
     margin-bottom: 0.3rem;
