--- a/scss/main.scss
+++ b/scss/main.scss
@@ -217,6 +217,64 @@ main {
   }
 }
 
+// Projects
+
+.projects {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
+  img {
+    width: 100%;
+    border: 3px #fff solid;
+    &:hover {
+      opacity: 0.5;
+      border-color: set-text-color2($primary-color);
+      @include easeOut;
+    }
+  }
+}
+
+// Button Styles
+
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
+  &:hover {
+    background: set-text-color2($primary-color);
+    color: set-text-color($primary-color);
+  }
+}
+
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 50);
+  color: #fff;
+}
+
+.btn-light {
+  @extend .btn;
+  background: lighten($primary-color, 50);
+  color: #333;
+}
+
+.canvas-info {
+  display: grid;
+  grid-gap: 10 px;
+  grid-template-areas: "canvastext";
+  grid-template-columns: repeat(1, 1fr);
+  .canvas-text {
+    grid-area: canvastext;
+    margin: 1rem;
+  }
+  .canvas-text {
+    background: lighten($primary-color, $amount: 5);
+    padding: 0.5rem;
+    border-bottom: set-text-color2($primary-color) 5px solid;
+  }
+}
+
 // Contact Page
 
 .boxes {
