--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -52,9 +52,7 @@
   .about-info {
     grid-template-areas:
       "bioimage"
-      "bio"
-      "bio"
-      "job";
+      "bio";
     grid-template-columns: 1fr;
   }
   .projects {
