--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,48 @@ main {
     padding: 0.5rem;
     border-bottom: rgba(40, 250, 239, 0.781) 5px solid; }
 
+.projects {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr); }
+  .projects img {
+    width: 100%;
+    border: 3px #fff solid; }
+    .projects img:hover {
+      opacity: 0.5;
+      border-color: rgba(40, 250, 239, 0.781);
+      transition: all 0.5s ease-out; }
+
+.btn, .btn-dark, .btn-light {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem; }
+  .btn:hover, .btn-dark:hover, .btn-light:hover {
+    background: rgba(40, 250, 239, 0.781);
+    color: #fff; }
+
+.btn-dark {
+  background: black;
+  color: #fff; }
+
+.btn-light {
+  background: #c4c4c4;
+  color: #333; }
+
+.canvas-info {
+  display: grid;
+  grid-gap: 10 px;
+  grid-template-areas: "canvastext";
+  grid-template-columns: repeat(1, 1fr); }
+  .canvas-info .canvas-text {
+    grid-area: canvastext;
+    margin: 1rem; }
+  .canvas-info .canvas-text {
+    background: #515151;
+    padding: 0.5rem;
+    border-bottom: rgba(40, 250, 239, 0.781) 5px solid; }
+
 .boxes {
   display: flex;
   flex-wrap: wrap;
@@ -351,6 +393,14 @@ main {
   margin-right: auto;
   width: 752px; }
 
+@media screen and (min-width: 1171px) {
+  .projects {
+    grid-template-columns: repeat(4, 1fr); } }
+
+@media screen and (min-width: 769px) and (max-width: 1170px) {
+  .projects {
+    grid-template-columns: repeat(3, 1fr); } }
+
 @media screen and (max-width: 768px) {
   main {
     align-items: center;
@@ -377,9 +427,13 @@ main {
       width: 150px;
       height: 150px; }
   .about-info {
-    grid-template-areas: "bioimage" "bio" "bio" "job";
-    grid-template-columns: 1fr; } }
+    grid-template-areas: "bioimage" "bio";
+    grid-template-columns: 1fr; }
+  .projects {
+    grid-template-columns: repeat(2, 1fr); } }
 
 @media screen and (max-width: 500px) {
   main#home h1 {
-    margin-top: 10vh; } }
+    margin-top: 10vh; }
+  .projects {
+    grid-template-columns: 1fr; } }
