--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -65,6 +65,12 @@
   main#home h1 {
     margin-top: 10vh;
   }
+  .bio-info {
+    grid-template-areas:
+      "bioimage"
+      "bio";
+    grid-template-columns: 1fr;
+  }
   .projects {
     grid-template-columns: 1fr;
   }
