--- a/scss/main.scss
+++ b/scss/main.scss
@@ -275,6 +275,52 @@ main {
   }
 }
 
+.unity-info {
+  display: grid;
+  grid-gap: 10 px;
+  grid-template-areas:
+    "unitytext1"
+    "unityimg1"
+    "unitytext2"
+    "unityimg2"
+    "unitytext3"
+    "unityimg3";
+  grid-template-columns: repeat(1, 1fr);
+  .unity-text_1 {
+    grid-area: unitytext1;
+    margin: 1rem;
+  }
+  .unity-text_2 {
+    grid-area: unitytext2;
+    margin: 1rem;
+  }
+  .unity-text_3 {
+    grid-area: unitytext3;
+    margin: 1rem;
+  }
+  .utext {
+    background: lighten($primary-color, $amount: 5);
+    padding: 0.5rem;
+    border-bottom: set-text-color2($primary-color) 5px solid;
+  }
+  .unity-img_1 {
+    grid-area: unityimg1;
+    margin: 1rem;
+  }
+  .unity-img_2 {
+    grid-area: unityimg2;
+    margin: 1rem;
+  }
+  .unity-img_3 {
+    grid-area: unityimg3;
+    margin: 1rem;
+  }
+  img {
+    width: 100%;
+    border: 3px set-text-color2($primary-color) solid;
+  }
+}
+
 // Contact Page
 
 .boxes {
