--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,7 +34,7 @@ h3 {
 
 a {
   color: #ececec;
-  text-decoration: none;
+  //text-decoration: none;
 }
 
 header {
@@ -69,6 +69,8 @@ main {
   }
 }
 
+// About Page
+
 .about-info {
   display: grid;
   grid-gap: 30 px;
@@ -76,15 +78,22 @@ main {
   grid-template-columns: repeat(1, 1fr);
 
   .about {
-    grid-area: bio;
+    grid-area: about;
     font-size: 1.5rem;
-  }
-  .about {
     background: lighten($primary-color, $amount: 5);
     padding: 0.5rem;
     border-bottom: set-text-color2($primary-color) 5px solid;
+    a {
+      color: set-text-color2($primary-color);
+      &:hover {
+        color: set-text-color($primary-color);
+        @include easeOut();
+      }
+    }
   }
 }
+
+// CV Page
 
 .bio-info {
   display: grid;
