--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -17,7 +17,6 @@
   main {
     align-items: center;
     text-align: center;
-
     .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
@@ -58,6 +57,13 @@
   .projects {
     grid-template-columns: repeat(2, 1fr);
   }
+  .fizzbuzz-info {
+    grid-template-areas:
+      "fizzbuzztext"
+      "fizzbuzzprogram"
+      "fizzbuzzcode";
+    grid-template-columns: 1fr;
+  }
 }
 
 //Smartphone
@@ -72,6 +78,13 @@
     grid-template-columns: 1fr;
   }
   .projects {
+    grid-template-columns: 1fr;
+  }
+  .fizzbuzz-info {
+    grid-template-areas:
+      "fizzbuzztext"
+      "fizzbuzzprogram"
+      "fizzbuzzcode";
     grid-template-columns: 1fr;
   }
 }
