--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -88,8 +88,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url("https://media.licdn.com/dms/image/C4D03AQGqF_jnYVxulQ/profile-displayphoto-shrink_200_200/0?e=1551916800&v=beta&t=BSLoqLkN0c99UAoxeNfW3YSrbtyg3Vnb8v5UadNctoY")
-        no-repeat;
+      background: url("../img/Me.jpg") no-repeat;
       background-size: cover;
       border-radius: 50%;
       border: solid 3px set-text-color2($primary-color);
