--- a/scss/main.scss
+++ b/scss/main.scss
@@ -145,7 +145,8 @@ main {
   grid-template-areas:
     "job1"
     "job2"
-    "job3";
+    "job3"
+    "job4";
   grid-template-columns: repeat(1, 1fr);
   .job-1 {
     grid-area: job1;
@@ -156,6 +157,10 @@ main {
     margin: 1rem;
   }
   .job-3 {
+    grid-area: job3;
+    margin: 1rem;
+  }
+  .job-4 {
     grid-area: job3;
     margin: 1rem;
   }
